--- a/src/1.15.2-fabric/mappings/tabs.yaml
+++ b/src/1.15.2-fabric/mappings/tabs.yaml
@@ -1,6 +1,6 @@
 _default: ItemGroup.MISC
 _mcreator_prefix: "CUSTOM:"
-_mcreator_map_template: "@NAMEItemGroup.tab"
+_mcreator_map_template: "@JavaModName.@NAME"
 No creative tab entry: null
 BUILDING_BLOCKS: ItemGroup.BUILDING_BLOCKS
 DECORATIONS: ItemGroup.DECORATIONS
