--- a/src/1.15.2-fabric/workspacebase/gradle.properties
+++ b/src/1.15.2-fabric/workspacebase/gradle.properties
@@ -13,4 +13,4 @@ org.gradle.jvmargs=-Xmx1G
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.7.1+build.301-1.15/ 
+	fabric_version=0.8.2+build.194
