--- a/src/1.15.2-fabric/generator.yaml
+++ b/src/1.15.2-fabric/generator.yaml
@@ -1,6 +1,6 @@
 name: Minecraft Fabric for @minecraft (@buildfileversion)
-basefeatures: [i18n, textures, model_json, model_obj]
-partial_support: [item, tab]
+basefeatures: [model_json, model_obj]
+partial_support: [item]
 status: dev
 minecraft: 1.15.2
 flavor: forge
