Fix some block materials being broken, bump version to 0.4.1

--- a/src/fabric-1.15.2/mappings/materials.yaml
+++ b/src/fabric-1.15.2/mappings/materials.yaml
@@ -2,42 +2,41 @@ _default: EARTH
 EARTH: EARTH
 GRASS: ORGANIC
 WOOD: WOOD
-ROCK: ROCK
-IRON: IRON
+ROCK: STONE
+IRON: METAL
 ANVIL: ANVIL
 WATER: WATER
 LAVA: LAVA
 LEAVES: LEAVES
-PLANTS: PLANTS
-TALL_PLANTS: TALL_PLANTS
+PLANTS: PLANT
+REPLACEABLE_PLANT: REPLACEABLE_PLANT
 SPONGE: SPONGE
 CLOTH: WOOL
 FIRE: FIRE
 SAND: SAND
-MISCELLANEOUS: MISCELLANEOUS
 CARPET: CARPET
 GLASS: GLASS
-REDSTONE_LIGHT: REDSTONE_LIGHT
+REDSTONE_LIGHT: REDSTONE_LAMP
 TNT: TNT
 CORAL: CORAL
 ICE: ICE
-PACKED_ICE: PACKED_ICE
-SNOW: SNOW
+PACKED_ICE: PACKED_ICESNOW: SNOW
 CRAFTED_SNOW: SNOW_BLOCK
 CACTUS: CACTUS
 CLAY: CLAY
-GOURD: GOURD
-DRAGON_EGG: DRAGON_EGG
+DRAGON_EGG: EGG
 PORTAL: PORTAL
 CAKE: CAKE
-WEB: WEB
+WEB: COBWEB
 AIR: AIR
 STRUCTURE_VOID: STRUCTURE_VOID
-OCEAN_PLANT: OCEAN_PLANT
+OCEAN_PLANT: UNDERWATER_PLANT
 SEA_GRASS: SEA_GRASS
 BUBBLE_COLUMN: BUBBLE_COLUMN
-SHULKER: SHULKER
+SHULKER: SHULKER_BOX
 BAMBOO_SAPLING: BAMBOO_SAPLING
 BAMBOO: BAMBOO
 BARRIER: BARRIER
 PISTON: PISTON
+FIRE: FIRE
+PUMPKIN: PUMPKIN
