--- a/src/fabric-1.15.2/mappings/stepsounds.yaml
+++ b/src/fabric-1.15.2/mappings/stepsounds.yaml
@@ -1,12 +1,14 @@
 _default: GROUND
-GROUND: GROUND
+GROUND: GRASS
 WOOD: WOOD
 PLANT: PLANT
 STONE: STONE
 METAL: METAL
 GLASS: GLASS
-CLOTH: CLOTH
+CLOTH: WOOL
 SAND: SAND
+GRAVEL: GRAVEL
+GLASS: GLASS
 SNOW: SNOW
 LADDER: LADDER
 ANVIL: ANVIL
@@ -18,7 +20,6 @@ BAMBOO_SAPLING: BAMBOO_SAPLING
 SCAFFOLDING: SCAFFOLDING
 SWEET_BERRY_BUSH: SWEET_BERRY_BUSH
 CROP: CROP
-STEM: STEM
 NETHER_WART: NETHER_WART
 LANTERN: LANTERN
-HONEY: field_226947_m_
+HONEY: HONEY
