--- a/src/fabric-1.15.2/workspacebase/build.gradle
+++ b/src/fabric-1.15.2/workspacebase/build.gradle
@@ -11,15 +11,12 @@ version = project.mod_version
 group = project.maven_group
 
 dependencies {
-	//to change the versions see the gradle.properties file
-	minecraft "com.mojang:minecraft:1.15.2"
-	mappings "net.fabricmc:yarn:1.15.2+build.15"
-
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:0.8.0+build.302-1.15"
-
-	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
-	// You may need to force-disable transitiveness on them.
+    minecraft "com.mojang:minecraft:1.15.2"
+    mappings "net.fabricmc:yarn:1.15.2+build.17:v2"
+    modImplementation "net.fabricmc:fabric-loader:0.8.7+build.201"
+            
+    //Fabric api
+    modImplementation "net.fabricmc.fabric-api:fabric-api:0.11.1+build.312-1.15"
 }
 
 processResources {
