--- a/src/fabric-1.15.2/mappings/mobspawntypes.yaml
+++ b/src/fabric-1.15.2/mappings/mobspawntypes.yaml
@@ -2,5 +2,5 @@ _default: EntityClassification.MONSTER
 monster: EntityClassification.MONSTER
 creature: EntityClassification.CREATURE
 ambient: EntityClassification.AMBIENT
-waterCreature: EntityClassification.WATER_CREATURE
+waterCreature: EntityClassification.AQUATIC
 misc: EntityClassification.MISC
