--- a/src/fabric-1.15.2/workspacebase/build.gradle
+++ b/src/fabric-1.15.2/workspacebase/build.gradle
@@ -11,11 +11,11 @@ version = project.mod_version
 group = project.maven_group
 
 dependencies {
-    	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+    	minecraft "com.mojang:minecraft:1.15.2"
+	mappings "net.fabricmc:yarn:1.15.2+build.17:v2"
+	modImplementation "net.fabricmc:fabric-loader:0.8.7+build.201"
 
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modImplementation "net.fabricmc.fabric-api:fabric-api:0.11.1+build.312-1.15"
 }
 
 processResources {
