--- a/src/fabric-1.15.2/workspacebase/gradle.properties
+++ b/src/fabric-1.15.2/workspacebase/gradle.properties
@@ -2,9 +2,9 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	minecraft_version=1.15.2
-	yarn_mappings=1.15.2+build.17
-	loader_version=0.8.7+build.201
+minecraft_version=1.15.2
+yarn_mappings=1.15.2+build.17
+loader_version=0.8.7+build.201
 
 	mod_version = 1.0.0
 	maven_group = net.fabricmc
@@ -12,4 +12,5 @@ org.gradle.jvmargs=-Xmx1G
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.11.1+build.312-1.15
+	#Fabric api
+	fabric_version=0.12.0+build.313-1.15
