--- a/src/fabric-1.15.2/generator.yaml
+++ b/src/fabric-1.15.2/generator.yaml
@@ -32,6 +32,18 @@ base_templates:
 - template: toolTags/pickaxes.json.ftl
   writer: json
   name: "@RESROOT/data/fabric/tags/items/pickaxes.json"
+- template: toolTags/axes.json.ftl
+  writer: json
+  name: "@RESROOT/data/fabric/tags/items/axes.json"
+- template: toolTags/shovels.json.ftl
+  writer: json
+  name: "@RESROOT/data/fabric/tags/items/shovels.json"
+- template: toolTags/swords.json.ftl
+  writer: json
+  name: "@RESROOT/data/fabric/tags/items/swords.json"
+- template: toolTags/hoes.json.ftl
+  writer: json
+  name: "@RESROOT/data/fabric/tags/items/hoes.json"
 - template: "modbase/pack.mcmeta.ftl"
   writer: json
   name: "@RESROOT/pack.mcmeta"
