--- a/src/fabric-1.15.2/tab.definition.yaml
+++ b/src/fabric-1.15.2/tab.definition.yaml
@@ -1,6 +1,6 @@
 templates:
   - template: itemgroup.java.ftl
-    name: "@SRCROOT/@BASEPACKAGEPATH/itemgroup/@NAMEItemGroup.java"
+    name: "@SRCROOT/@BASEPACKAGEPATH/item/@NAMEItemGroup.java"
 
 localizationkeys:
   - key: itemGroup.tab@registryname
