Fix itemgroup localizations

--- a/src/fabric-1.15.2/tab.definition.yaml
+++ b/src/fabric-1.15.2/tab.definition.yaml
@@ -3,5 +3,5 @@ templates:
     name: "@SRCROOT/@BASEPACKAGEPATH/item/@NAMEItemGroup.java"
 
 localizationkeys:
-  - key: itemGroup.@MODID.@REGISTRYNAME
+  - key: itemGroup.@modid.@registryname
     mapto: name
