Biomes didn't compile properly.

--- a/src/fabric-1.15.2/generator.yaml
+++ b/src/fabric-1.15.2/generator.yaml
@@ -27,6 +27,9 @@ base_templates:
 - template: modbase/mod.java.ftl
   name: "@SRCROOT/@BASEPACKAGEPATH/@JavaModName.java"
   canLock: true
+- template: modbase/biomeRegistry.java.ftl
+  name: "@SRCROOT/@BASEPACKAGEPATH/registry/@JavaModNameBiomes.java"
+  canLock: true
 - template: modbase/fabric.mod.json.ftl
   writer: json
   name: "@RESROOT/fabric.mod.json"
