--- a/src/fabric-1.15.2/biome.definition.yaml
+++ b/src/fabric-1.15.2/biome.definition.yaml
@@ -1,3 +1,3 @@
 templates:
   - template: biome.java.ftl
-    name: "@SRCROOT/@BASEPACKAGEPATH/world/biome/@NAMEBiome.java"
+    name: "@SRCROOT/@BASEPACKAGEPATH/world/biome/@NAME.java"
