--- a/src/fabric-1.15.2/generator.yaml
+++ b/src/fabric-1.15.2/generator.yaml
@@ -1,6 +1,6 @@
 name: Minecraft Fabric for 1.15.2 (@buildfileversion)
-basefeatures: [model_json,model_obj,sounds]
-partial_support: [block,item,food,armor]
+basefeatures: [model_json,model_obj]
+partial_support: [block,item,food,armor,tab,biome]
 status: dev
 buildfileversion: 0.8.7+build.201
 
