Fixed mapping name

--- a/src/fabric-1.15.2/mappings/sounds.yaml
+++ b/src/fabric-1.15.2/mappings/sounds.yaml
@@ -19,7 +19,7 @@ item.armor.equip_chain: ITEM_ARMOR_EQUIP_CHAIN
 item.armor.equip_diamond: ITEM_ARMOR_EQUIP_DIAMOND
 item.armor.equip_elytra: ITEM_ARMOR_EQUIP_ELYTRA
 item.armor.equip_generic: ITEM_ARMOR_EQUIP_GENERIC
-item.armor.equip_gold: ITEM_ARMOR_EQUIPE_GOLD
+item.armor.equip_gold: ITEM_ARMOR_EQUIP_GOLD
 item.armor.equip_iron: ITEM_ARMOR_EQUIP_IRON
 item.armor.equip_leather: ITEM_ARMOR_EQUIP_LEATHER
 item.armor.equip_turtle: ITEM_ARMOR_EQUIP_TURTLE
