--- a/src/fabric-1.15.2/generator.yaml
+++ b/src/fabric-1.15.2/generator.yaml
@@ -30,6 +30,9 @@ base_templates:
 - template: modbase/biomeRegistry.java.ftl
   name: "@SRCROOT/@BASEPACKAGEPATH/registry/@JavaModNameBiomes.java"
   canLock: true
+- template: modbase/client.java.ftl
+  name: "@SRCROOT/@BASEPACKAGEPATH/ClientInit.java"
+  canLock: true
 - template: modbase/fabric.mod.json.ftl
   writer: json
   name: "@RESROOT/fabric.mod.json"
