Fixed bug where incorrect class names exists

--- a/src/fabric-1.15.2/plant.definition.yaml
+++ b/src/fabric-1.15.2/plant.definition.yaml
@@ -1,6 +1,6 @@
 templates:
   - template: plant.java.ftl
-    name: "@SRCROOT/@BASEPACKAGEPATH/block/@NAMEBlock.java"
+    name: "@SRCROOT/@BASEPACKAGEPATH/block/@NAME.java"
   - template: json/plant_item.json.ftl
     writer: json
     name: "@MODASSETSROOT/models/item/@registryname.json"
