--- a/src/fabric-1.15.2/generator.yaml
+++ b/src/fabric-1.15.2/generator.yaml
@@ -1,8 +1,8 @@
 name: Minecraft Fabric for 1.15.2 (@buildfileversion)
 basefeatures: [model_json,model_obj]
-partial_support: [block,item,food,armor,biome,sounds]
+partial_support: [block,item,food,armor,biome]
 status: stable
-buildfileversion: 0.8.7+build.201
+buildfileversion: 0.8.8+build.202
 
 gradle:
   setup_task: genSources
