--- a/src/fabric-1.15.2/workspacebase/build.gradle
+++ b/src/fabric-1.15.2/workspacebase/build.gradle
@@ -16,7 +16,7 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:0.8.8+build.202"
 
     //Fabric api
-    modImplementation "net.fabricmc.fabric-api:fabric-api:0.12.0+build.313-1.15"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:0.13.0+build.315-1.15""
 
 		//Mod Menu
 		modImplementation "io.github.prospector:modmenu:1.10.2+build.32"
