--- a/src/fabric-1.15.2/biome.definition.yaml
+++ b/src/fabric-1.15.2/biome.definition.yaml
@@ -1,3 +1,7 @@
 templates:
   - template: biome.java.ftl
     name: "@SRCROOT/@BASEPACKAGEPATH/world/biome/@NAME.java"
+
+localizationkeys:
+  - key: biome.@modid.@registryname
+    mapto: name
