--- a/src/fabric-1.15.2/generator.yaml
+++ b/src/fabric-1.15.2/generator.yaml
@@ -1,8 +1,7 @@
-name: Minecraft Fabric for @minecraft (@buildfileversion)
+name: Minecraft Fabric for 1.15.2 (@buildfileversion)
 basefeatures: [block,model_json,model_obj,item,food]
 partial_support: [armor,biome]
 status: stable
-minecraft: 1.15.2
 buildfileversion: 0.8.8+build.202
 
 gradle:
