Let's start again
 On branch 1.0.0 rewrite
 Changes to be committed:
	deleted:    src/fabric-1.15.2/armor.definition.yaml
	deleted:    src/fabric-1.15.2/biome.definition.yaml
	deleted:    src/fabric-1.15.2/block.definition.yaml
	deleted:    src/fabric-1.15.2/food.definition.yaml
	deleted:    src/fabric-1.15.2/fuel.definition.yaml
	modified:   src/fabric-1.15.2/generator.yaml
	deleted:    src/fabric-1.15.2/item.definition.yaml
	deleted:    src/fabric-1.15.2/plant.definition.yaml
	deleted:    src/fabric-1.15.2/tab.definition.yaml
	deleted:    src/fabric-1.15.2/templates/armorItem.java.ftl
	deleted:    src/fabric-1.15.2/templates/armorMaterial.java.ftl
	deleted:    src/fabric-1.15.2/templates/biome.java.ftl
	deleted:    src/fabric-1.15.2/templates/block.java.ftl
	deleted:    src/fabric-1.15.2/templates/food.java.ftl
	deleted:    src/fabric-1.15.2/templates/fuel.java.ftl
	deleted:    src/fabric-1.15.2/templates/item.java.ftl
	deleted:    src/fabric-1.15.2/templates/itemgroup.java.ftl
	deleted:    src/fabric-1.15.2/templates/modbase/biomeRegistry.java.ftl
	modified:   src/fabric-1.15.2/templates/modbase/client.java.ftl
	modified:   src/fabric-1.15.2/templates/modbase/mod.java.ftl
	deleted:    src/fabric-1.15.2/templates/plant.java.ftl
	deleted:    src/fabric-1.15.2/templates/toolItem.java.ftl
	deleted:    src/fabric-1.15.2/templates/toolMaterial.java.ftl
	deleted:    src/fabric-1.15.2/templates/toolTags/axes.json.ftl
	deleted:    src/fabric-1.15.2/templates/toolTags/hoes.json.ftl
	deleted:    src/fabric-1.15.2/templates/toolTags/pickaxes.json.ftl
	deleted:    src/fabric-1.15.2/templates/toolTags/shovels.json.ftl
	deleted:    src/fabric-1.15.2/templates/toolTags/swords.json.ftl
	deleted:    src/fabric-1.15.2/tool.definition.yaml
	modified:   src/fabric-1.15.2/workspacebase/build.gradle
	modified:   src/fabric-1.15.2/workspacebase/settings.gradle
	modified:   src/plugin.json

--- a/src/fabric-1.15.2/generator.yaml
+++ b/src/fabric-1.15.2/generator.yaml
@@ -5,10 +5,10 @@ status: stable
 buildfileversion: 0.8.8+build.202
 
 gradle:
-  setup_task: genSources
+  setup_task: tasks
   run_client: runClient
   run_server: runServer
-  export_file: "build/libs/sources.jar"
+  export_file: "build/libs/modid.jar"
 
 source_root: "@WORKSPACEROOT/src/main/java"
 res_root: "@WORKSPACEROOT/src/main/resources"
@@ -25,29 +25,12 @@ base_templates:
 - template: modbase/mod.java.ftl
   name: "@SRCROOT/@BASEPACKAGEPATH/@JavaModName.java"
   canLock: true
-- template: modbase/biomeRegistry.java.ftl
-  name: "@SRCROOT/@BASEPACKAGEPATH/registry/@JavaModNameBiomes.java"
-  canLock: true
 - template: modbase/client.java.ftl
   name: "@SRCROOT/@BASEPACKAGEPATH/ClientInit.java"
   canLock: true
 - template: modbase/fabric.mod.json.ftl
   writer: json
   name: "@RESROOT/fabric.mod.json"
-- template: toolTags/pickaxes.json.ftl
-  writer: json
-  name: "@RESROOT/data/fabric/tags/items/pickaxes.json"
-- template: toolTags/axes.json.ftl
-  writer: json
-  name: "@RESROOT/data/fabric/tags/items/axes.json"
-- template: toolTags/shovels.json.ftl
-  writer: json
-  name: "@RESROOT/data/fabric/tags/items/shovels.json"
-- template: toolTags/swords.json.ftl
-  writer: json
-  name: "@RESROOT/data/fabric/tags/items/swords.json"
-- template: toolTags/hoes.json.ftl
-  writer: json
   name: "@RESROOT/data/fabric/tags/items/hoes.json"
 - template: "modbase/pack.mcmeta.ftl"
   writer: json
