--- a/src/fabric-1.15.2/workspacebase/settings.gradle
+++ b/src/fabric-1.15.2/workspacebase/settings.gradle
@@ -6,5 +6,7 @@ pluginManagement {
             url = 'https://maven.fabricmc.net/'
         }
         gradlePluginPortal()
+	mavenCentral()
+	mavenLocal()
     }
 }
