--- a/src/fabric-1.15.2/workspacebase/build.gradle
+++ b/src/fabric-1.15.2/workspacebase/build.gradle
@@ -1,24 +1,24 @@
 plugins {
-	id 'fabric-loom' version '0.4.26'
-	id 'maven-publish'
+	id 'fabric-loom' version '0.4-SNAPSHOT'
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
 archivesBaseName = 'modid'
-version = '1.0'
+version = '1.0.0'
 group = 'com.yourname.modid'
 
 dependencies {
-    minecraft "com.mojang:minecraft:1.15.2"
-    mappings "net.fabricmc:yarn:1.15.2+build.17:v2"
-    modImplementation "net.fabricmc:fabric-loader:0.8.8+build.202"
+    	minecraft("com.mojang:minecraft:1.16.1")
+    	mappings("net.fabricmc:yarn:1.16.1+build.21:v2")
+    	modImplementation("net.fabricmc:fabric-loader:0.9.0+build.204")
 
-    //Fabric api
-    modImplementation "net.fabricmc.fabric-api:fabric-api:0.13.0+build.315-1.15"
-		//Mod Menu
-		modImplementation "io.github.prospector:modmenu:1.10.2+build.32"
+    	//Fabric api
+    	modImplementation("net.fabricmc.fabric-api:fabric-api:0.15.1+build.380-1.16.1")
+
+	//Mod Menu
+	modApi("io.github.prospector:modmenu:1.14.5+build.30")
 }
 
 processResources {
@@ -38,9 +38,6 @@ tasks.withType(JavaCompile) {
 	options.encoding = "UTF-8"
 }
 
-// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-// if it is present.
-// If you remove this task, sources will not be generated.
 task sourcesJar(type: Jar, dependsOn: classes) {
 	classifier = "sources"
 	from sourceSets.main.allSource
@@ -48,25 +45,4 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 
 jar {
 	from "LICENSE"
-}
-
-// configure the maven publication
-publishing {
-	publications {
-		mavenJava(MavenPublication) {
-			// add all the jars that should be included when publishing to maven
-			artifact(remapJar) {
-				builtBy remapJar
-			}
-			artifact(sourcesJar) {
-				builtBy remapSourcesJar
-			}
-		}
-	}
-
-	// select the repositories you want to publish to
-	repositories {
-		// uncomment to publish to the local maven
-		// mavenLocal()
-	}
 }
