--- a/src/fabric-1.15.2/generator.yaml
+++ b/src/fabric-1.15.2/generator.yaml
@@ -1,11 +1,11 @@
-name: Minecraft Fabric for 1.15.2 (@buildfileversion)
-basefeatures: [model_json,model_obj]
-partial_support: [block,item,food,armor,biome]
+name: Minecraft Fabric for 1.16.1 (@buildfileversion)
+basefeatures: [model_json]
+partial_support: [item]
 status: stable
-buildfileversion: 0.8.8+build.202
+buildfileversion: 0.9.0
 
 gradle:
-  setup_task: tasks
+  setup_task: help
   run_client: runClient
   run_server: runServer
   export_file: "build/libs/modid.jar"
