Added item procedures and procedure blocks
 Changes to be committed:
	modified:   src/fabric-1.15.2/generator.yaml
	new file:   src/fabric-1.15.2/procedure.definition.yaml
	new file:   src/fabric-1.15.2/procedures/_call_procedure.java.ftl
	new file:   src/fabric-1.15.2/procedures/_call_procedure_at.java.ftl
	new file:   src/fabric-1.15.2/procedures/_procedure_retval.java.ftl
	new file:   src/fabric-1.15.2/procedures/block_add.java.ftl
	new file:   src/fabric-1.15.2/procedures/block_nbt_num_get.java.ftl
	new file:   src/fabric-1.15.2/procedures/block_nbt_num_set.java.ftl
	new file:   src/fabric-1.15.2/procedures/block_nbt_text_get.java.ftl
	new file:   src/fabric-1.15.2/procedures/block_nbt_text_set.java.ftl
	new file:   src/fabric-1.15.2/procedures/block_notify.java.ftl
	new file:   src/fabric-1.15.2/procedures/block_remove.java.ftl
	new file:   src/fabric-1.15.2/procedures/block_remove_drop.java.ftl
	new file:   src/fabric-1.15.2/procedures/block_remove_with_particles.java.ftl
	new file:   src/fabric-1.15.2/procedures/block_replace.java.ftl
	modified:   src/fabric-1.15.2/templates/item.java.ftl
	modified:   src/fabric-1.15.2/templates/modbase/mod.java.ftl
	new file:   src/fabric-1.15.2/templates/procedure.java.ftl
	modified:   src/fabric-1.15.2/workspacebase/build.gradle

--- a/src/fabric-1.15.2/generator.yaml
+++ b/src/fabric-1.15.2/generator.yaml
@@ -8,13 +8,14 @@ gradle:
   setup_task: help
   run_client: runClient
   run_server: runServer
-  export_file: "build/libs/modid.jar"
+  export_file: "build/libs/modid-1.0.0.jar"
 
 source_root: "@WORKSPACEROOT/src/main/java"
 res_root: "@WORKSPACEROOT/src/main/resources"
 mod_assets_root: "@RESROOT/assets/@modid"
 mod_data_root: "@RESROOT/data/@modid"
 
+structures_dir: "@MODDATAROOT/structures"
 sounds_dir: "@MODASSETSROOT/sounds"
 other_textures_dir: "@MODASSETSROOT/textures"
 block_textures_dir: "@MODASSETSROOT/textures/blocks"
