--- a/src/fabric-1.16.1/fuel.definition.yaml
+++ b/src/fabric-1.16.1/fuel.definition.yaml
@@ -1,3 +1,3 @@
 templates:
   - template: fuel.java.ftl
-    name: "@SRCROOT/@BASEPACKAGEPATH/fuel/@NAMEFuel.java"
+    name: "@SRCROOT/@BASEPACKAGEPATH/item/@NAMEFuel.java"
