--- a/src/fabric-1.16.1/item.definition.yaml
+++ b/src/fabric-1.16.1/item.definition.yaml
@@ -1,6 +1,6 @@
 templates:
   - template: item.java.ftl
-    name: "@SRCROOT/@BASEPACKAGEPATH/item/@NAME.java"
+    name: "@SRCROOT/@BASEPACKAGEPATH/item/@NAMEItem.java"
   - template: json/item.json.ftl
     writer: json
     condition: "renderType #= 0"
