--- a/src/fabric-1.16.1/musicdisc.definition.yaml
+++ b/src/fabric-1.16.1/musicdisc.definition.yaml
@@ -1,6 +1,6 @@
 templates:
   - template: musicdisc.java.ftl
-    name: "@SRCROOT/@BASEPACKAGEPATH/item/@NAMEItem.java"
+    name: "@SRCROOT/@BASEPACKAGEPATH/item/@NAMEMusicDisc.java"
   - template: json/item.json.ftl
     writer: json
     name: "@MODASSETSROOT/models/item/@registryname.json"
