--- a/src/fabric-1.16.1/keybind.definition.yaml
+++ b/src/fabric-1.16.1/keybind.definition.yaml
@@ -1,6 +1,6 @@
 templates:
   - template: keybind.java.ftl
-    name: "@SRCROOT/@BASEPACKAGEPATH/keybind/@NAMEKeyBinding.java"
+    name: "@SRCROOT/@BASEPACKAGEPATH/client/@NAMEKeyBinding.java"
 
 localizationkeys:
   - key: key.mcreator.@registryname
