Changed things with mappings and fixed bugs
Fixed biomes  mappings
Returns to old mappings (1.15.2) -> too much things to change otherwise
Fixed fuel and item group elements
Puts the method that cause a bug with items like a comment

--- a/src/fabric-1.16.1/mappings/biomes.yaml
+++ b/src/fabric-1.16.1/mappings/biomes.yaml
@@ -1,80 +1,83 @@
 _default: plains
+_mcreator_prefix: "CUSTOM:"
+_mcreator_map_template: "@modid:@registryname"
 _bypass_prefix: "No parent"
-OCEAN: OCEAN
-PLAINS: PLAINS
-DESERT: DESERT
-MOUNTAINS: MOUNTAINS
-FOREST: FOREST
-TAIGA: TAIGA
-SWAMP: SWAMP
-RIVER: RIVER
-NETHER_WASTES: NETHER_WASTES
-THE_END: THE_END
-FROZEN_OCEAN: FROZEN_OCEAN
-FROZEN_RIVER: FROZEN_RIVER
-SNOWY_TUNDRA: SNOWY_TUNDRA
-SNOWY_MOUNTAINS: SNOWY_MOUNTAINS
-MUSHROOM_FIELDS: MUSHROOM_FIELDS
-MUSHROOM_FIELD_SHORE: MUSHROOM_FIELD_SHORE
-BEACH: BEACH
-DESERT_HILLS: DESERT_HILLS
-WOODED_HILLS: WOODED_HILLS
-TAIGA_HILLS: TAIGA_HILLS
-MOUNTAIN_EDGE: MOUNTAIN_EDGE
-JUNGLE: JUNGLE
-JUNGLE_HILLS: JUNGLE_HILLS
-JUNGLE_EDGE: JUNGLE_EDGE
-DEEP_OCEAN: DEEP_OCEAN
-STONE_SHORE: STONE_SHORE
-SNOWY_BEACH: SNOWY_BEACH
-BIRCH_FOREST: BIRCH_FOREST
-BIRCH_FOREST_HILLS: BIRCH_FOREST_HILLS
-DARK_FOREST: DARK_FOREST
-SNOWY_TAIGA: SNOWY_TAIGA
-GIANT_TREE_TAIGA: GIANT_TREE_TAIGA
-GIANT_TREE_TAIGA_HILLS: GIANT_TREE_TAIGA_HILLS
-WOODED_MOUNTAINS: WOODED_MOUNTAINS
-SAVANNA: SAVANNA
-SAVANNA_PLATEAU: SAVANNA_PLATEAU
-BADLANDS: BADLANDS
-WOODED_BADLANDS_PLATEAU: WOODED_BADLANDS_PLATEAU
-BADLANDS_PLATEAU: BADLANDS_PLATEAU
-SMALL_END_ISLANDS: SMALL_END_ISLANDS
-END_MIDLANDS: END_MIDLANDS
-END_HIGHLANDS: END_HIGHLANDS
-END_BARRENS: END_BARRENS
-WARM_OCEAN: WARM_OCEAN
-LUKEWARM_OCEAN: LUKEWARM_OCEAN
-COLD_OCEAN: COLD_OCEAN
-DEEP_WARM_OCEAN: DEEP_WARM_OCEAN
-DEEP_LUKEWARM_OCEAN: DEEP_LUKEWARM_OCEAN
-DEEP_COLD_OCEAN: DEEP_COLD_OCEAN
-DEEP_FROZEN_OCEAN: DEEP_FROZEN_OCEAN
-THE_VOID: THE_VOID
-SUNFLOWER_PLAINS: SUNFLOWER_PLAINS
-DESERT_LAKES: DESERT_LAKES
-GRAVELLY_MOUNTAINS: GRAVELLY_MOUNTAINS
-FLOWER_FOREST: FLOWER_FOREST
-TAIGA_MOUNTAINS: TAIGA_MOUNTAINS
-SWAMP_HILLS: SWAMP_HILLS
-ICE_SPIKES: ICE_SPIKES
-MODIFIED_JUNGLE: MODIFIED_JUNGLE
-MODIFIED_JUNGLE_EDGE: MODIFIED_JUNGLE_EDGE
-TALL_BIRCH_FOREST: TALL_BIRCH_FOREST
-TALL_BIRCH_HILLS: TALL_BIRCH_HILLS
-DARK_FOREST_HILLS: DARK_FOREST_HILLS
-SNOWY_TAIGA_MOUNTAINS: SNOWY_TAIGA_MOUNTAINS
-GIANT_SPRUCE_TAIGA: GIANT_SPRUCE_TAIGA
-GIANT_SPRUCE_TAIGA_HILLS: GIANT_SPRUCE_TAIGA_HILLS
-MODIFIED_GRAVELLY_MOUNTAINS: MODIFIED_GRAVELLY_MOUNTAINS
-SHATTERED_SAVANNA: SHATTERED_SAVANNA
-SHATTERED_SAVANNA_PLATEAU: SHATTERED_SAVANNA_PLATEAU
-ERODED_BADLANDS: ERODED_BADLANDS
-MODIFIED_WOODED_BADLANDS_PLATEAU: MODIFIED_WOODED_BADLANDS_PLATEAU
-MODIFIED_BADLANDS_PLATEAU: MODIFIED_BADLANDS_PLATEAU
-BAMBOO_JUNGLE: BAMBOO_JUNGLE
-BAMBOO_JUNGLE_HILLS: BAMBOO_JUNGLE_HILLS
-SOUL_SAND_VALLEY: SOUL_SAND_VALLEY
-CRIMSON_FOREST: CRIMSON_FOREST
-WARPED_FOREST: WARPED_FOREST
-BASALT_DELTAS: BASALT_DELTAS
+ocean: ocean
+plains: plains
+desert: desert
+mountains: mountains
+forest: forest
+taiga: taiga
+swamp: swamp
+river: river
+nether: nether_waste
+the_end: the_end
+frozen_ocean: frozen_ocean
+frozen_river: frozen_river
+snowy_tundra: snowy_tundra
+snowy_mountains: snowy_mountains
+mushroom_fields: mushroom_fields
+mushroom_field_shore: mushroom_field_shore
+beaches: beach
+desert_hills: desert_hills
+forest_hills: wooded_hills
+taiga_hills: taiga_hills
+smaller_extreme_hills: mountain_edge
+jungle: jungle
+jungle_hills: jungle_hills
+jungle_edge: jungle_edge
+deep_ocean: deep_ocean
+stone_beach: stone_shore
+cold_beach: snowy_beach
+birch_forest: birch_forest
+birch_forest_hills: birch_forest_hills
+roofed_forest: dark_forest
+taiga_cold: snowy_taiga
+taiga_cold_hills: snowy_taiga_hills
+redwood_taiga: giant_tree_taiga
+redwood_taiga_hills: giant_tree_taiga_hills
+extreme_hills_with_trees: wooded_mountains
+savanna: savanna
+savanna_rock: savanna_plateau
+badlands: badlands
+wooded_badlands_plateau: wooded_badlands_plateau
+badlands_plateau: badlands_plateau
+void: the_void
+mutated_plains: sunflower_plains
+mutated_desert: desert_lakes
+mutated_extreme_hills: gravelly_mountains
+mutated_forest: flower_forest
+mutated_taiga: taiga_mountains
+mutated_swampland: swamp_hills
+mutated_ice_flats: ice_spikes
+mutated_jungle: modified_jungle
+mutated_jungle_edge: modified_jungle_edge
+mutated_birch_forest: tall_birch_forest
+mutated_birch_forest_hills: tall_birch_hills
+mutated_roofed_forest: dark_forest_hills
+mutated_taiga_cold: snowy_taiga_mountains
+mutated_redwood_taiga: giant_spruce_taiga
+mutated_redwood_taiga_hills: giant_spruce_taiga_hills
+mutated_extreme_hills_with_trees: modified_gravelly_mountains
+mutated_savanna: shattered_savanna
+mutated_savanna_rock: shattered_savanna_plateau
+mutated_mesa: eroded_badlands
+mutated_mesa_rock: modified_wooded_badlands_plateau
+mutated_mesa_clear_rock: modified_badlands_plateau
+small_end_islands: small_end_islands
+end_midlands: end_midlands
+end_highlands: end_highlands
+end_barrens: end_barrens
+warm_ocean: warm_ocean
+lukewarm_ocean: lukewarm_ocean
+cold_ocean: cold_ocean
+deep_warm_ocean: deep_warm_ocean
+deep_lukewarm_ocean: deep_lukewarm_ocean
+deep_cold_ocean: deep_cold_ocean
+deep_frozen_ocean: deep_frozen_ocean
+bamboo_jungle: bamboo_jungle
+bamboo_jungle_hills: bamboo_jungle_hills
+soul_sand_valley: SOUL_SAND_VALLEY
+crimson-forest: CRIMSON_FOREST
+warped_forest: WARPED_FOREST
+basalt_delta: BASALT_DELTAS
