Update Fabric API version

--- a/src/fabric-1.16.1/workspacebase/build.gradle
+++ b/src/fabric-1.16.1/workspacebase/build.gradle
@@ -15,7 +15,7 @@ dependencies {
 	modImplementation("net.fabricmc:fabric-loader:0.9.0+build.204")
 
 	//Fabric api
-	modImplementation("net.fabricmc.fabric-api:fabric-api:0.15.1+build.380-1.16.1")
+	modImplementation "net.fabricmc.fabric-api:fabric-api:0.16.2+build.385-1.16.1"
 
 	//Mod Menu
 	modApi("io.github.prospector:modmenu:1.14.5+build.30")
