--- a/src/fabric-1.16.2/armor.definition.yaml
+++ b/src/fabric-1.16.2/armor.definition.yaml
@@ -6,25 +6,25 @@ templates:
     condition: enableHelmet
     deleteWhenConditionFalse: true
     variables: "item=helmet"
-    name: "@MODASSETSROOT/models/item/@registrynamehelmet.json"
+    name: "@MODASSETSROOT/models/item/@registryname_helmet.json"
   - template: json/item.json.ftl
     writer: json
     condition: enableBody
     deleteWhenConditionFalse: true
     variables: "item=body"
-    name: "@MODASSETSROOT/models/item/@registrynamebody.json"
+    name: "@MODASSETSROOT/models/item/@registryname_chestplate.json"
   - template: json/item.json.ftl
     writer: json
     condition: enableLeggings
     deleteWhenConditionFalse: true
     variables: "item=leggings"
-    name: "@MODASSETSROOT/models/item/@registrynamelegs.json"
+    name: "@MODASSETSROOT/models/item/@registryname_leggings.json"
   - template: json/item.json.ftl
     writer: json
     condition: enableBoots
     deleteWhenConditionFalse: true
     variables: "item=boots"
-    name: "@MODASSETSROOT/models/item/@registrynameboots.json"
+    name: "@MODASSETSROOT/models/item/@registryname_boots.json"
 
 localizationkeys:
   - key: item.@modid.@registrynamehelmet
