--- a/src/fabric-1.16.2/mappings/biomes.yaml
+++ b/src/fabric-1.16.2/mappings/biomes.yaml
@@ -1,83 +1,76 @@
-_default: plains
-_mcreator_prefix: "CUSTOM:"
-_mcreator_map_template: "@modid:@registryname"
+_default: PLAINS
 _bypass_prefix: "No parent"
-ocean: ocean
-plains: plains
-desert: desert
-mountains: mountains
-forest: forest
-taiga: taiga
-swamp: swamp
-river: river
-nether: nether_waste
-the_end: the_end
-frozen_ocean: frozen_ocean
-frozen_river: frozen_river
-snowy_tundra: snowy_tundra
-snowy_mountains: snowy_mountains
-mushroom_fields: mushroom_fields
-mushroom_field_shore: mushroom_field_shore
-beaches: beach
-desert_hills: desert_hills
-forest_hills: wooded_hills
-taiga_hills: taiga_hills
-smaller_extreme_hills: mountain_edge
-jungle: jungle
-jungle_hills: jungle_hills
-jungle_edge: jungle_edge
-deep_ocean: deep_ocean
-stone_beach: stone_shore
-cold_beach: snowy_beach
-birch_forest: birch_forest
-birch_forest_hills: birch_forest_hills
-roofed_forest: dark_forest
-taiga_cold: snowy_taiga
-taiga_cold_hills: snowy_taiga_hills
-redwood_taiga: giant_tree_taiga
-redwood_taiga_hills: giant_tree_taiga_hills
-extreme_hills_with_trees: wooded_mountains
-savanna: savanna
-savanna_rock: savanna_plateau
-badlands: badlands
-wooded_badlands_plateau: wooded_badlands_plateau
-badlands_plateau: badlands_plateau
-void: the_void
-mutated_plains: sunflower_plains
-mutated_desert: desert_lakes
-mutated_extreme_hills: gravelly_mountains
-mutated_forest: flower_forest
-mutated_taiga: taiga_mountains
-mutated_swampland: swamp_hills
-mutated_ice_flats: ice_spikes
-mutated_jungle: modified_jungle
-mutated_jungle_edge: modified_jungle_edge
-mutated_birch_forest: tall_birch_forest
-mutated_birch_forest_hills: tall_birch_hills
-mutated_roofed_forest: dark_forest_hills
-mutated_taiga_cold: snowy_taiga_mountains
-mutated_redwood_taiga: giant_spruce_taiga
-mutated_redwood_taiga_hills: giant_spruce_taiga_hills
-mutated_extreme_hills_with_trees: modified_gravelly_mountains
-mutated_savanna: shattered_savanna
-mutated_savanna_rock: shattered_savanna_plateau
-mutated_mesa: eroded_badlands
-mutated_mesa_rock: modified_wooded_badlands_plateau
-mutated_mesa_clear_rock: modified_badlands_plateau
-small_end_islands: small_end_islands
-end_midlands: end_midlands
-end_highlands: end_highlands
-end_barrens: end_barrens
-warm_ocean: warm_ocean
-lukewarm_ocean: lukewarm_ocean
-cold_ocean: cold_ocean
-deep_warm_ocean: deep_warm_ocean
-deep_lukewarm_ocean: deep_lukewarm_ocean
-deep_cold_ocean: deep_cold_ocean
-deep_frozen_ocean: deep_frozen_ocean
-bamboo_jungle: bamboo_jungle
-bamboo_jungle_hills: bamboo_jungle_hills
-soul_sand_valley: SOUL_SAND_VALLEY
-crimson-forest: CRIMSON_FOREST
-warped_forest: WARPED_FOREST
-basalt_delta: BASALT_DELTAS
+ocean: OCEAN
+plains: PLAINS
+desert: DESERT
+mountains: MOUNTAINS
+forest: FOREST
+taiga: TAIGA
+swamp: SWAMP
+river: RIVER
+nether: NETHER_WASTES
+the_end: THE_END
+frozen_ocean: FROZEN_OCEAN
+frozen_river: FROZEN_RIVER
+snowy_tundra: SNOWY_TUNDRA
+snowy_mountains: SNOWY_MOUNTAINS
+mushroom_fields: MUSHROOM_FIELDS
+mushroom_fields_shore: MUSHROOM_FIELD_SHORE
+beach: BEACH
+desert_hills: DESERT_HILLS
+wooded_hills: WOODED_HILLS
+taiga_hills: TAIGA_HILLS
+mountain_edge: MOUNTAIN_EDGE
+jungle: JUNGLE
+jungle_hils: JUNGLE_HILLS
+jungle_edge: JUNGLE_EDGE
+deep_ocean: DEEP_OCEAN
+stone_shore: STONE_SHORE
+snowy_beach: SNOWY_BEACH
+birch_forest: BIRCH_FOREST
+birch_forest_hills: BIRCH_FOREST_HILLS
+dark_forest: DARK_FOREST
+snowy_tundra: SNOWY_TAIGA
+giant_tree_taiga: GIANT_TREE_TAIGA
+giant_tree_taiga_hills: GIANT_TREE_TAIGA_HILLS
+wooded_mountains: WOODED_MOUNTAINS
+savanna: SAVANNA
+savanna_plateau: SAVANNA_PLATEAU
+badlands: BADLANDS
+wooded_badlands_plateau: WOODED_BADLANDS_PLATEAU
+badlands_plateau: BADLANDS_PLATEAU
+small_end_islands: SMALL_END_ISLANDS
+end_midlands: END_MIDLANDS
+end_highlands: END_HIGHLANDS
+end_barrens: END_BARRENS
+warm_ocean: WARM_OCEAN
+lukewarm_ocean: LUKEWARM_OCEAN
+cold_ocean: COLD_OCEAN
+deep_warm_ocean: DEEP_WARM_OCEAN
+deep_lukewarm_ocean: DEEP_LUKEWARM_OCEAN
+deep_cold_ocean: DEEP_COLD_OCEAN
+deep_frozen_ocean: DEEP_FROZEN_OCEAN
+the_void: THE_VOID
+sunflower_plains: SUNFLOWER_PLAINS
+desert_lakes: DESERT_LAKES
+gravelly_mountains: GRAVELLY_MOUNTAINS
+flower_forest: FLOWER_FOREST
+taiga_mountains: TAIGA_MOUNTAINS
+swamp_hills: SWAMP_HILLS
+ice_spikes: ICE_SPIKES
+modified_jungle: MODIFIED_JUNGLE
+modified_jungle_edge: MODIFIED_JUNGLE_EDGE
+tall_birch_forest: TALL_BIRCH_FOREST
+tall_birch_hills: TALL_BIRCH_HILLS
+dark_forest_hills: DARK_FOREST_HILLS
+snowy_taiga_mountains: SNOWY_TAIGA_MOUNTAINS
+giant_spruce_taiga: GIANT_SPRUCE_TAIGA
+giant_spruce_taiga_hills: GIANT_SPRUCE_TAIGA_HILLS
+modified_gravelly_mountains: MODIFIED_GRAVELLY_MOUNTAINS
+shattered_savanna: SHATTERED_SAVANNA
+shattered_savanna_plateau: SHATTERED_SAVANNA_PLATEAU
+eroded_badlands: ERODED_BADLANDS
+modified_wooded_badlands_plateau: MODIFIED_WOODED_BADLANDS_PLATEAU
+modified_badlands_plateau: MODIFIED_BADLANDS_PLATEAU
+bamboo_jungle: BAMBOO_JUNGLE
+bamboo_jungle_hills: BAMBOO_JUNGLE_HILLS
